# cv_tv_tests

./: .gitignore  CMakeLists.txt  artifacts_detector.cpp  artifacts_detector.h  base_detector.cpp  base_detector.h  curve_detector.cpp  curve_detector.h  cv_tools.cpp  cv_tools.h  main.cpp  mura_detector.cpp  mura_detector.h  rect_detector.cpp  rect_detector.h
